WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184607
WebKit crashes when libwebrtc.dylib is missing
https://bugs.webkit.org/show_bug.cgi?id=184607
Summary
WebKit crashes when libwebrtc.dylib is missing
Ryosuke Niwa
Reported
2018-04-13 15:40:47 PDT
WebKit crashes whenever libwebrtc.dylib is missing. <
rdar://problem/39390243
>
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2018-04-13 15:42:27 PDT
Committed
r230644
: <
https://trac.webkit.org/changeset/230644
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug