WebKit crashes when libwebrtc.dylib is missing https://bugs.webkit.org/show_bug.cgi?id=184607

Rubber-stamped by Jer Noble.

Don't call LibWebRTC related code when libwebrtc is not available.

* dom/Document.cpp:
(WebCore::Document::prepareForDestruction):
(WebCore::Document::suspend):


Canonical link: https://commits.webkit.org/200144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230644 268f45cc-cd09-0410-ab3c-d52691b4dbfc